--- a/authentication/pom.xml
+++ b/authentication/pom.xml
@@ -158,7 +158,8 @@
     <build>
         <plugins>
             <!-- MAVEN COMPILER PLUGIN -->
-            <plugin>
+            <!-- MAVEN COMPILER PLUGIN -->
+                 <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>${maven.plugin.compiler.version}</version>
